<resources>
    <string name="app_name">NeWork</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_profile">Profile</string>

    //navigation
    <string name="menu_feed">Posts</string>
    <string name="menu_events">Events</string>
    <string name="menu_users">Users</string>
    <string name="menu_new_post">New post</string>
    <string name="menu_new_event">New event</string>
    <string name="menu_new_job">New job</string>

    //menu
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="add">Add</string>

    //card post
    <string name="post_avatar">Avatar</string>
    <string name="post_menu">Menu</string>
    <string name="post_like">Like</string>
    <string name="post_share">Share</string>
    <string name="post_coords">Coordinates</string>

    //event post
    <string name="member">Member</string>
    <string name="speakers">Speakers</string>
    <string name="empty_speakers">There are no speakers in the meeting</string>

    //new event new post
    <string name="enter_text">Enter text</string>
    <string name="add_time">Add time</string>
    <string name="add_place">Add place</string>
    <string name="add_content">Add content</string>
    <string name="event_type">Add event type</string>
    <string name="add_link">Add link</string>
    <string name="add_user">Add user</string>
    <string name="icon">Icon</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="user">Users</string>
    <string name="content_added">Content added</string>
    <string name="user_added">User added:</string>
    <string name="content_post_is_empty">Add a post description</string>
    <string name="content_event_is_empty">Add a event description</string>
    <string name="map">Map</string>

    //adapter
    <string name="unknown_item_type">Unknown item type</string>
    <string name="unknown_view_type">Unknown view type</string>

    //Feed
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="user_registered">User already registered</string>
    <string name="on_picture">Image</string>

    //User
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration">Registration</string>
    <string name="create_new_acc">Create new account</string>
    <string name="enter">Enter</string>
    <string name="sign_in_wrong">Wrong login or password</string>
    <string name="sign_in_error">Something went wrong. Try again later</string>
    <string name="login_success">You are logged in</string>
    <string name="login_exit">You are logged out</string>
    <string name="sign_in">Profile login</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_login">Login</string>
    <string name="sign_up_avatar">Avatar</string>
    <string name="sign_up_but_clear">Clear</string>
    <string name="reg_ok">Profile created successfully!</string>
    <string name="required_field">Required field!</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="photo_error">Error</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>

    //My wall
    <string name="login_title">You must be logged in to view the list of posts</string>
    <string name="login_button">Profile login</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>

    //dialog
    <string name="log_account">Log into your account</string>
    <string name="enter_in_app">Log into your account to use the application</string>
    <string name="guest">Later</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login_exit_qu">Do you want to log out of your profile?</string>
    <string name="text_confirm_save">Thank you!\nYour data has been saved!</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="save_coords">Do you want to select these coordinates?</string>
    <string name="changes_lost">All changes will be lost.\nDo you want to continue?</string>

    //map
    <string name="my_location">My location</string>
    <string name="permission">Permission</string>
    <string name="error_location">Location can\'t be find</string>

    //profile
    <string name="profile">Profile</string>
    <string name="post_job">Post/Job</string>

    //job
    <string name="company_name">Company name</string>
    <string name="position">Position</string>
    <string name="start">Date start</string>
    <string name="finish">Date finish</string>
    <string name="until_now">Until now</string>
    <string name="empty_jobs">No job listed</string>
    <string name="company_name_error">Company name isn\'t blank</string>
    <string name="position_error">Position isn\'t blank</string>
    <string name="date_start_error">Date start isn\'t blank</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="dash">-</string>
    <string name="users">Users</string>
    <string name="clear">Clear</string>
    <string name="menu_attachment">Attach</string>
    <string name="menu_place">Place</string>
    <string name="menu_photo">Photo</string>
    <string name="save">Save</string>
    <string name="events_online">Online</string>
    <string name="likers">Likers</string>
    <string name="participants">Participants</string>

</resources>