<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/unauthorized"
        android:visible="false">
        <item
            android:id="@+id/signInFragment"
            android:icon="@drawable/ic_login"
            android:title="@string/sign_in" />
        <item
            android:id="@+id/signUpFragment"
            android:icon="@drawable/ic_app_registration"
            android:title="@string/registration" />
    </group>

    <group
        android:id="@+id/authorized"
        android:visible="false">
        <item
            android:id="@+id/exitAppDialog"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_feed" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_event"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_my_wall"
            android:icon="@drawable/ic_menu_my_wall"
            android:title="@string/menu_my_wall" />
    </group>
</menu>