<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/unauthorized"
        android:visible="false">
        <item
            android:id="@+id/signInFragment"
            android:icon="@drawable/ic_login"
            android:title="@string/sign_in" />
        <item
            android:id="@+id/registerFragment"
            android:icon="@drawable/ic_app_registration"
            android:title="@string/registration" />
    </group>

    <group
        android:id="@+id/authorized"
        android:visible="false">
        <item
            android:id="@+id/exitAppDialog"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
    </group>


</menu>