<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/card_post_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:hint="@string/company_name"
            android:inputType="textShortMessage"
            android:padding="@dimen/card_post_16" />

        <EditText
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:hint="@string/position"
            android:inputType="textShortMessage"
            android:padding="@dimen/card_post_16" />

        <EditText
            android:id="@+id/editLink"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:gravity="start|top"
            android:hint="@string/add_link"
            android:inputType="textUri"
            android:padding="@dimen/card_post_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_post_8">

            <ImageView
                android:id="@+id/iconStartTime"
                android:layout_width="@dimen/avatar"
                android:layout_height="@dimen/avatar"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/addStartTimeBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_post_8"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/start"
                android:textColor="@color/black"
                android:textSize="@dimen/card_post_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconStartTime"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_post_8">

            <ImageView
                android:id="@+id/iconFinishTime"
                android:layout_width="@dimen/avatar"
                android:layout_height="@dimen/avatar"
                android:contentDescription="@string/icon"
                android:src="@drawable/ic_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/addFinishTimeBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_post_8"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/finish"
                android:textColor="@color/black"
                android:textSize="@dimen/card_post_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iconFinishTime"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/deleteDataFinish"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="@dimen/avatar"
                android:layout_height="@dimen/avatar"
                android:contentDescription="@string/icon"
                android:visibility="invisible"
                app:icon="@drawable/ic_delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>