<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/card_post_8">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/card_post_8"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/card_post_16"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage"
            tools:text="@tools:sample/lorem[2]" />


        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/card_post_8"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/card_post_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            tools:ignore="SpUsage"
            tools:text="@tools:sample/lorem[2]" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_avatar_height"
            android:contentDescription="@string/post_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login"
            tools:src="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_post_16"
            android:layout_marginTop="@dimen/card_post_16"
            android:showDividers="middle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorColor="@null"
            app:tabIndicatorGravity="stretch">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wall" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jobs" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/list_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout" />


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/card_post_8"
            android:background="@color/grey"
            app:layout_constraintTop_toBottomOf="@id/tabLayout"
            tools:layout_editor_absoluteX="8dp" />

        <TextView
            android:id="@+id/empty_job_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_jobs"
            android:textColor="@color/black"
            android:textSize="@dimen/card_post_16"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tabLayout"
            app:layout_constraintEnd_toEndOf="@id/tabLayout"
            app:layout_constraintStart_toStartOf="@id/tabLayout"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:ignore="SpUsage" />

        <ProgressBar
            android:id="@+id/load_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/tabLayout"
            app:layout_constraintEnd_toEndOf="@id/tabLayout"
            app:layout_constraintStart_toStartOf="@id/tabLayout"
            app:layout_constraintTop_toBottomOf="@+id/view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="no"
        app:srcCompat="@drawable/ic_add" />

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/job_list"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginTop="@dimen/big_avatar_height"-->
<!--        android:scrollbars="vertical"-->
<!--        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--        app:layout_anchor="@+id/constraintLayout"-->
<!--        app:layout_anchorGravity="center"-->
<!--        tools:listitem="@layout/card_job" />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>